--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,152 +6,180 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇻🇳_VN_越南
-    type: vmess
-    server: 3v4n04.abzoones.xyz
-    port: 36874
-    cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: vn04.abpilot.xyz
-    network: tcp
-  - &id002
     name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
     type: vmess
-    server: 8h2k05.abzoones.xyz
-    port: 36606
+    server: 5m4h0k04.mcfront.xyz
+    port: 31601
     cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: hk05.abpilot.xyz
+    servername: hk04.lovemc.xyz
+    network: tcp
+  - &id002
+    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
+    type: vmess
+    server: 3d1c4a04.mcfront.xyz
+    port: 31701
+    cipher: auto
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ca04.lovemc.xyz
     network: tcp
   - &id003
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_1
     type: vmess
-    server: 3u1s06.abzoones.xyz
-    port: 36511
+    server: 4o5a3u04.mcfront.xyz
+    port: 31821
     cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: us06.abpilot.xyz
+    servername: au04.lovemc.xyz
     network: tcp
   - &id004
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
+    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
     type: vmess
-    server: 8t6w04.abzoones.xyz
-    port: 36301
+    server: 7c1a1r04.mcfront.xyz
+    port: 31861
     cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: tw04.abpilot.xyz
+    servername: ar04.lovemc.xyz
     network: tcp
   - &id005
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: 3d6e04.abzoones.xyz
-    port: 36841
+    server: 104.19.145.223
+    port: 8880
     cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
+    uuid: 53ae65be-81ee-4766-8a09-da43c44c4d30
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
-    servername: de04.abpilot.xyz
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /youlingkaishi
+      headers:
+        host: uyaa.vtcss.top
   - &id006
-    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
+    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
     type: vmess
-    server: 2t1u04.abzoones.xyz
-    port: 36868
+    server: 3c2h4u04.mcfront.xyz
+    port: 31864
     cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: tr04.abpilot.xyz
+    servername: hu04.lovemc.xyz
     network: tcp
   - &id007
     name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
     type: vmess
-    server: 9s5g04.abzoones.xyz
-    port: 36201
+    server: 1c7s2g06.mcfront.xyz
+    port: 31211
     cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: sg04.abpilot.xyz
+    servername: sg06.lovemc.xyz
     network: tcp
   - &id008
-    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
+    name: 🇨🇳_CN_中国->🇻🇳_VN_越南
     type: vmess
-    server: 2h4u04.abzoones.xyz
-    port: 36864
+    server: 2w8u2a04.mcfront.xyz
+    port: 31874
     cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: hu04.abpilot.xyz
+    servername: vn04.lovemc.xyz
     network: tcp
   - &id009
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_2
     type: vmess
-    server: 7i4n04.abzoones.xyz
-    port: 36831
+    server: 2d1t5w06.mcfront.xyz
+    port: 31311
     cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: in04.abpilot.xyz
+    servername: tw06.lovemc.xyz
     network: tcp
   - &id010
-    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
+    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
     type: vmess
-    server: 9a8r04.abzoones.xyz
-    port: 36861
+    server: 7c6i2r04.mcfront.xyz
+    port: 31877
     cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: ar04.abpilot.xyz
+    servername: br04.lovemc.xyz
     network: tcp
   - &id011
-    name: 🇺🇸_US_美国_1
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
     type: vmess
-    server: 38.63.17.176
-    port: 50702
+    server: 6w7j3p05.mcfront.xyz
+    port: 31106
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
-    type: vmess
-    server: 8u9a04.abzoones.xyz
-    port: 36871
-    cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: ua04.abpilot.xyz
+    servername: jp05.lovemc.xyz
+    network: tcp
+  - &id012
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
+    type: vmess
+    server: 5m4h0k06.mcfront.xyz
+    port: 31611
+    cipher: auto
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: hk06.lovemc.xyz
     network: tcp
   - &id013
-    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
+    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
     type: vmess
-    server: 141.101.123.176
+    server: 4t1u6r04.mcfront.xyz
+    port: 31868
+    cipher: auto
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: tr04.lovemc.xyz
+    network: tcp
+  - &id014
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
+    type: vmess
+    server: 1c7s2g04.mcfront.xyz
+    port: 31201
+    cipher: auto
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: sg04.lovemc.xyz
+    network: tcp
+  - &id015
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_1
+    type: vmess
+    server: 104.25.97.255
     port: 2052
     cipher: auto
     uuid: 71b93046-9b6b-48d5-c5fb-9997daf0c7f4
@@ -163,92 +191,187 @@ proxies:
       path: /ylks
       headers:
         host: x1.ylks01.eu.org
-  - &id014
+  - &id016
     name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
     type: vmess
-    server: 8r5u04.abzoones.xyz
-    port: 36851
+    server: 4t1r5u04.mcfront.xyz
+    port: 31851
     cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: ru04.abpilot.xyz
-    network: tcp
-  - &id015
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
-    type: vmess
-    server: 1j8p06.abzoones.xyz
-    port: 36111
-    cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp06.abpilot.xyz
-    network: tcp
-  - &id016
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 2u3k04.abzoones.xyz
-    port: 36811
-    cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: uk04.abpilot.xyz
+    servername: ru04.lovemc.xyz
     network: tcp
   - &id017
-    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 6i2r04.abzoones.xyz
-    port: 36877
+    server: 173.245.58.89
+    port: 2095
     cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
+    uuid: 43f71098-601d-459b-91f2-7e85a9ac6042
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
-    servername: br04.abpilot.xyz
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: x2.ylks01.eu.org
   - &id018
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    name: 🇨🇾_CY_塞浦路斯->🇺🇸_US_美国
     type: vmess
-    server: 3u1s04.abzoones.xyz
-    port: 36501
+    server: jpwadnca.114514782.xyz
+    port: 2052
     cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
+    uuid: 3f6ad16c-f1ea-38fd-bf1d-a64e77ffaa32
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
-    servername: us04.abpilot.xyz
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /miaoshen
+      headers:
+        host: jpwadnca.114514782.xyz
   - &id019
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_1
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: vmess
-    server: 8t6w06.abzoones.xyz
-    port: 36311
+    server: 4a2u0a06.mcfront.xyz
+    port: 31511
     cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: tw06.abpilot.xyz
+    servername: us06.lovemc.xyz
     network: tcp
   - &id020
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: vmess
-    server: 9s5g05.abzoones.xyz
-    port: 36206
+    server: 4a2u0a05.mcfront.xyz
+    port: 31506
     cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: sg05.abpilot.xyz
+    servername: us05.lovemc.xyz
     network: tcp
   - &id021
-    name: 🇺🇸_US_美国_2
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: vmess
+    server: 6q3i1n04.mcfront.xyz
+    port: 31831
+    cipher: auto
+    uuid: b7d59fbf-7be4-49bc-822e-079e06455d67
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: in04.lovemc.xyz
+    network: tcp
+  - &id022
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_2
+    type: vmess
+    server: 104.17.106.135
+    port: 2052
+    cipher: auto
+    uuid: 71b93046-9b6b-48d5-c5fb-9997daf0c7f4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ylks
+      headers:
+        host: x1.ylks01.eu.org
+  - &id023
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 162.159.12.77
+    port: 2052
+    cipher: auto
+    uuid: 71b93046-9b6b-48d5-c5fb-9997daf0c7f4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ylks
+      headers:
+        host: x1.ylks01.eu.org
+  - &id024
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 104.24.198.75
+    port: 2052
+    cipher: auto
+    uuid: 3f100fa9-a160-4a1c-c40d-e22070ac9785
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer00
+      headers:
+        host: x2.ylks01.eu.org
+  - &id025
+    name: 🇫🇷_FR_法国
+    type: vmess
+    server: 173.245.49.24
+    port: 2052
+    cipher: auto
+    uuid: 71b93046-9b6b-48d5-c5fb-9997daf0c7f4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ylks
+      headers:
+        host: x1.ylks01.eu.org
+  - &id026
+    name: 🇨🇷_CR_哥斯达黎加
+    type: vmess
+    server: 190.93.245.248
+    port: 2052
+    cipher: auto
+    uuid: 71b93046-9b6b-48d5-c5fb-9997daf0c7f4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ylks
+      headers:
+        host: x1.ylks01.eu.org
+  - &id027
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    type: vmess
+    server: yd1.01dj.sbs
+    port: 443
+    cipher: auto
+    uuid: 08d3c0b5-6515-4187-860f-2e41dac6a94b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /sometimesnaive
+      headers:
+        host: yd1.01dj.sbs
+  - &id028
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: chanel.vpnshop.top
+    port: 29530
+    cipher: auto
+    uuid: b0298d06-3790-4807-a7b1-ebba8d167cd2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id029
+    name: 🇺🇸_US_美国_6
     type: vmess
     server: 104.18.1.110
     port: 443
@@ -262,189 +385,28 @@ proxies:
       path: /c3lZ7dp02p?ed=2048
       headers:
         host: d2.pgypgykmoljklj.xyz
-  - &id022
-    name: 🇨🇳_CN_中国->🇵🇭_PH_菲律宾
-    type: vmess
-    server: 7p3h04.abzoones.xyz
-    port: 36801
-    cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ph04.abpilot.xyz
-    network: tcp
-  - &id023
-    name: 🇺🇸_US_美国->🇫🇮_FI_芬兰
-    type: vmess
-    server: 104.31.16.45
-    port: 80
-    cipher: auto
-    uuid: 2fcc2939-7dcf-4741-aa03-825bc40e23fd
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /CZfczvtieCZXdOlgWhgDLX
-      headers:
-        host: de3.irteh.fun
-  - &id024
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_2
-    type: vmess
-    server: 5a4u04.abzoones.xyz
-    port: 36821
-    cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: au04.abpilot.xyz
-    network: tcp
-  - &id025
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: vmess
-    server: 3u1s05.abzoones.xyz
-    port: 36506
-    cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us05.abpilot.xyz
-    network: tcp
-  - &id026
-    name: 🇩🇪_DE_德国
-    type: vmess
-    server: 185.249.227.220
-    port: 42653
-    cipher: auto
-    uuid: a2d2f285-3650-47fa-9d83-9a259d52abd9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-  - &id027
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
-    type: vmess
-    server: 8h2k04.abzoones.xyz
-    port: 36601
-    cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hk04.abpilot.xyz
-    network: tcp
-  - &id028
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 137.175.4.116
-    port: 49871
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id029
-    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
-    type: vmess
-    server: 5c1a04.abzoones.xyz
-    port: 36701
-    cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ca04.abpilot.xyz
-    network: tcp
   - &id030
-    name: 🇺🇸_US_美国_4
+    name: 🇨🇦_CA_加拿大->🇰🇷_KR_韩国
     type: vmess
-    server: 104.25.197.67
+    server: krawycaa.76898102.xyz
     port: 2095
     cipher: auto
-    uuid: 43f71098-601d-459b-91f2-7e85a9ac6042
+    uuid: 7ed7e770-140d-37d0-8bbd-11cafb8186e2
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /blue
+      path: /funsdfrh
       headers:
-        host: x2.ylks01.eu.org
+        host: krawyca.76898102.xyz
   - &id031
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_3
+    name: 🇨🇦_CA_加拿大->🇸🇬_SG_新加坡
     type: vmess
-    server: 9s5g06.abzoones.xyz
-    port: 36211
+    server: 2.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
+    port: 8080
     cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: sg06.abpilot.xyz
-    network: tcp
-  - &id032
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_3
-    type: vmess
-    server: 8h2k06.abzoones.xyz
-    port: 36611
-    cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hk06.abpilot.xyz
-    network: tcp
-  - &id033
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 137.175.61.130
-    port: 46679
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id034
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
-    type: vmess
-    server: 1j8p04.abzoones.xyz
-    port: 36116
-    cipher: auto
-    uuid: 69402109-f469-4d04-b720-4644162f8136
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp04.abpilot.xyz
-    network: tcp
-  - &id035
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 162.159.152.95
-    port: 443
-    cipher: auto
-    uuid: dddd0b29-1576-4003-9990-d7cea34264db
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /835757
-      headers:
-        host: dedi2.1808.cf
-  - &id036
-    name: 🇹🇼_TW_台湾
-    type: vmess
-    server: v07.jiedian.stream
-    port: 80
-    cipher: auto
-    uuid: 04daec61-d0bc-4a62-90ef-f7c62f271ed0
+    uuid: 52672366-6993-4d21-8f1a-d102b2b87744
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -452,61 +414,38 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: v07.jiedian.stream
-  - &id037
-    name: 🇺🇸_US_美国_7
+        host: ccaws.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
+  - &id032
+    name: 🇻🇬_VG_英属维尔京群岛->🇯🇵_JP_日本
     type: vmess
-    server: chanel.vpnshop.top
-    port: 37421
+    server: 9.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
+    port: 8880
     cipher: auto
-    uuid: f8257079-b5fc-4d84-9889-708a7e52e26f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id038
-    name: 🇫🇷_FR_法国
-    type: vmess
-    server: pl2-vmess.greenssh.xyz
-    port: 80
-    cipher: auto
-    uuid: a60d4d2f-6a61-4c16-9d63-94a97e65d1f3
+    uuid: 52672366-6993-4d21-8f1a-d102b2b87744
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /vmess
+      path: /
       headers:
-        host: pl2-vmess.greenssh.xyz
-  - &id039
-    name: 🇨🇳_CN_中国
-    type: vmess
-    server: 36.133.171.209
-    port: 11023
-    cipher: auto
-    uuid: 8c042a38-71c1-1dcb-00df-54880236e0dc
-    alterId: 0
-    tls: false
+        host: jpppp.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
+  - &id033
+    name: 🇹🇼_TW_台湾
+    type: trojan
+    server: hinet2.downloadvip.cfd
+    port: 443
+    udp: true
+    password: d59235c4-44ea-4e2e-bd90-5eed10db3b15
+    sni: download.xn--mes358a9urctx.com
     skip-cert-verify: true
     network: tcp
-  - &id040
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: chanel.vpnshop.top
-    port: 29530
-    cipher: auto
-    uuid: b0298d06-3790-4807-a7b1-ebba8d167cd2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id041
-    name: 🇮🇪_IE_爱尔兰
+  - &id034
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_3
     type: ss
-    server: 13.69.252.86
-    port: 6091
-    password: 1uB3vmXVoz1hnB3wiZ83mD
+    server: 106.75.136.42
+    port: 34085
+    password: 9bc3178b-959d-45ea-a487-b66c6098a4a5
     cipher: chacha20-ietf-poly1305
 proxy-groups:
   - name: PROXY
@@ -568,13 +507,6 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
-      - *id039
-      - *id040
-      - *id041
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -614,13 +546,6 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
-      - *id039
-      - *id040
-      - *id041
   - name: SELECT
     type: select
     proxies:
@@ -658,13 +583,6 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
-      - *id039
-      - *id040
-      - *id041
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
