--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,341 +6,196 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 104.20.55.60
-    port: 2052
-    cipher: auto
-    uuid: 3f100fa9-a160-4a1c-c40d-e22070ac9785
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer00
-      headers:
-        host: x2.ylks01.eu.org
-  - &id002
-    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_1
-    type: vmess
-    server: 104.24.49.199
-    port: 2095
-    cipher: auto
-    uuid: 1d1362f7-073c-4e5c-b470-02b8222c226c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ylks
-      headers:
-        host: x1.ylks01.eu.org
-  - &id003
-    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
-    type: vmess
-    server: 2t1u04.abzoones.xyz
-    port: 36868
-    cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tr04.abpilot.xyz
-    network: tcp
-  - &id004
-    name: 🇸🇬_SG_新加坡_1
-    type: vmess
-    server: 13.215.205.45
-    port: 443
-    cipher: auto
-    uuid: 9bc3178b-959d-45ea-a487-b66c6098a4a5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id005
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 2u3k04.abzoones.xyz
-    port: 36811
-    cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: uk04.abpilot.xyz
-    network: tcp
-  - &id006
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: vmess
-    server: 3u1s06.abzoones.xyz
-    port: 36511
-    cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us06.abpilot.xyz
-    network: tcp
-  - &id007
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
-    type: vmess
-    server: 1j8p06.abzoones.xyz
-    port: 36111
-    cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp06.abpilot.xyz
-    network: tcp
-  - &id008
     name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
     type: vmess
-    server: 8r5u04.abzoones.xyz
-    port: 36851
+    server: 4t1r5u04.mcfront.xyz
+    port: 31851
     cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
+    uuid: 0bebfbc7-0bc1-4121-bec1-3ecf85120ba8
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: ru04.abpilot.xyz
+    servername: ru04.lovemc.xyz
     network: tcp
-  - &id009
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
+  - &id002
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
     type: vmess
-    server: 1j8p05.abzoones.xyz
-    port: 36106
+    server: 162.159.195.185
+    port: 443
     cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
+    uuid: 553f509e-56c1-4eaf-be67-b9b20c780bff
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: jp05.abpilot.xyz
+    network: ws
+    ws-opts:
+      path: /ws1341380505
+      headers:
+        host: xbly100.wsvpn.xyz
+  - &id003
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: vmess
+    server: 3a4u0k04.mcfront.xyz
+    port: 31811
+    cipher: auto
+    uuid: 0bebfbc7-0bc1-4121-bec1-3ecf85120ba8
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: uk04.lovemc.xyz
     network: tcp
-  - &id010
+  - &id004
     name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
     type: vmess
-    server: 6i2r04.abzoones.xyz
-    port: 36877
+    server: 7c6i2r04.mcfront.xyz
+    port: 31877
     cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
+    uuid: 0bebfbc7-0bc1-4121-bec1-3ecf85120ba8
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: br04.abpilot.xyz
+    servername: br04.lovemc.xyz
     network: tcp
-  - &id011
-    name: 🇳🇱_NL_荷兰->🇸🇬_SG_新加坡
+  - &id005
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
     type: vmess
-    server: 188.114.99.97
-    port: 2095
+    server: 6w7j3p05.mcfront.xyz
+    port: 31106
     cipher: auto
-    uuid: 1d1362f7-073c-4e5c-b470-02b8222c226c
+    uuid: 0bebfbc7-0bc1-4121-bec1-3ecf85120ba8
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: jp05.lovemc.xyz
+    network: tcp
+  - &id006
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡
+    type: vmess
+    server: 1c7s2g06.mcfront.xyz
+    port: 31211
+    cipher: auto
+    uuid: 0bebfbc7-0bc1-4121-bec1-3ecf85120ba8
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: sg06.lovemc.xyz
+    network: tcp
+  - &id007
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: vmess
+    server: 4w7u4a04.mcfront.xyz
+    port: 31871
+    cipher: auto
+    uuid: 0bebfbc7-0bc1-4121-bec1-3ecf85120ba8
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ua04.lovemc.xyz
+    network: tcp
+  - &id008
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国_1
+    type: vmess
+    server: 3d6e04.abzoones.xyz
+    port: 36841
+    cipher: auto
+    uuid: 9a71a0ca-e05a-473d-bc3e-1866366664f4
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: de04.abpilot.xyz
+    network: tcp
+  - &id009
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
+    type: vmess
+    server: 5m4h0k05.mcfront.xyz
+    port: 31606
+    cipher: auto
+    uuid: 0bebfbc7-0bc1-4121-bec1-3ecf85120ba8
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: hk05.lovemc.xyz
+    network: tcp
+  - &id010
+    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国_1
+    type: vmess
+    server: 221.131.165.175
+    port: 19106
+    cipher: auto
+    uuid: 1b35440a-1309-339b-9dd3-ff90ff887d76
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /ylks
-      headers:
-        host: x1.ylks01.eu.org
-  - &id012
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_1
+      path: /soda
+  - &id011
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚
     type: vmess
-    server: 8t6w05.abzoones.xyz
-    port: 36306
+    server: 4o5a3u04.mcfront.xyz
+    port: 31821
     cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
+    uuid: 0bebfbc7-0bc1-4121-bec1-3ecf85120ba8
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: tw05.abpilot.xyz
+    servername: au04.lovemc.xyz
     network: tcp
-  - &id013
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
+  - &id012
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
     type: vmess
-    server: 8h2k05.abzoones.xyz
-    port: 36606
+    server: 104.25.243.70
+    port: 80
     cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
+    uuid: 6884d728-7fb0-4172-c319-e8caeadcd01f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /tg@herhero6
+      headers:
+        host: us.herofree66.tk
+  - &id013
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度_1
+    type: vmess
+    server: 7i4n04.abzoones.xyz
+    port: 36831
+    cipher: auto
+    uuid: 9a71a0ca-e05a-473d-bc3e-1866366664f4
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: hk05.abpilot.xyz
+    servername: in04.abpilot.xyz
     network: tcp
   - &id014
-    name: 🇨🇳_CN_中国->🇵🇭_PH_菲律宾
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: vmess
-    server: 7p3h04.abzoones.xyz
-    port: 36801
+    server: 3u1s05.abzoones.xyz
+    port: 36506
     cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
+    uuid: 9a71a0ca-e05a-473d-bc3e-1866366664f4
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: ph04.abpilot.xyz
+    servername: us05.abpilot.xyz
     network: tcp
   - &id015
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: vmess
-    server: 9s5g05.abzoones.xyz
-    port: 36206
+    server: 3u1s04.abzoones.xyz
+    port: 36501
     cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
+    uuid: 9a71a0ca-e05a-473d-bc3e-1866366664f4
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: sg05.abpilot.xyz
+    servername: us04.abpilot.xyz
     network: tcp
   - &id016
-    name: 🇨🇳_CN_中国->🇻🇳_VN_越南
+    name: 🇨🇷_CR_哥斯达黎加->🇸🇬_SG_新加坡
     type: vmess
-    server: 3v4n04.abzoones.xyz
-    port: 36874
-    cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: vn04.abpilot.xyz
-    network: tcp
-  - &id017
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
-    type: vmess
-    server: 104.18.23.26
-    port: 8080
-    cipher: auto
-    uuid: dcafb669-fefc-4994-e3a9-5f40ed6aa7cf
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /sshtproject
-      headers:
-        host: v2free.sshtproect.shop
-  - &id018
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_3
-    type: vmess
-    server: 1j8p04.abzoones.xyz
-    port: 36116
-    cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp04.abpilot.xyz
-    network: tcp
-  - &id019
-    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国
-    type: vmess
-    server: 8k2r04.abzoones.xyz
-    port: 36401
-    cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: kr04.abpilot.xyz
-    network: tcp
-  - &id020
-    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
-    type: vmess
-    server: 5c1a04.abzoones.xyz
-    port: 36701
-    cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ca04.abpilot.xyz
-    network: tcp
-  - &id021
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
-    type: vmess
-    server: 9s5g04.abzoones.xyz
-    port: 36201
-    cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: sg04.abpilot.xyz
-    network: tcp
-  - &id022
-    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
-    type: vmess
-    server: 9a8r04.abzoones.xyz
-    port: 36861
-    cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ar04.abpilot.xyz
-    network: tcp
-  - &id023
-    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
-    type: vmess
-    server: 2h4u04.abzoones.xyz
-    port: 36864
-    cipher: auto
-    uuid: 2c20a8f9-0685-468d-a8ef-0075b463691e
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hu04.abpilot.xyz
-    network: tcp
-  - &id024
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 108.162.194.118
-    port: 80
-    cipher: auto
-    uuid: a1d16be7-8aa7-4fd3-ea1b-79117cd9cce6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer00
-      headers:
-        host: x2.ylks01.eu.org
-  - &id025
-    name: 🇸🇬_SG_新加坡_2
-    type: vmess
-    server: 13.215.190.191
-    port: 80
-    cipher: auto
-    uuid: ca7febc2-bb45-4e6d-810e-ab0af6009c4e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /aws-china-media/Y699Gjx2rNw.mp4
-  - &id026
-    name: 🇬🇧_GB_英国->🇰🇷_KR_韩国
-    type: vmess
-    server: krawycaa.76898102.xyz
-    port: 2095
-    cipher: auto
-    uuid: 7ed7e770-140d-37d0-8bbd-11cafb8186e2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /funsdfrh
-      headers:
-        host: krawyca.76898102.xyz
-  - &id027
-    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_2
-    type: vmess
-    server: 104.26.13.165
+    server: 190.93.244.241
     port: 8080
     cipher: auto
     uuid: 516a22c5-54c1-4203-ec0a-bb3b2517a82d
@@ -352,38 +207,83 @@ proxies:
       path: /ylks
       headers:
         host: x1.ylks01.eu.org
-  - &id028
-    name: 🇻🇳_VN_越南
+  - &id017
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度_2
     type: vmess
-    server: 103.190.36.130
-    port: 80
+    server: 6q3i1n04.mcfront.xyz
+    port: 31831
     cipher: auto
-    uuid: e79dcd87-ea5c-4058-a186-c7e3bc844ab8
+    uuid: 0bebfbc7-0bc1-4121-bec1-3ecf85120ba8
     alterId: 0
-    tls: false
+    tls: true
+    skip-cert-verify: true
+    servername: in04.lovemc.xyz
+    network: tcp
+  - &id018
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国_2
+    type: vmess
+    server: 9t1d5e04.mcfront.xyz
+    port: 31841
+    cipher: auto
+    uuid: 0bebfbc7-0bc1-4121-bec1-3ecf85120ba8
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: de04.lovemc.xyz
+    network: tcp
+  - &id019
+    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国_2
+    type: vmess
+    server: 8l2k1r04.mcfront.xyz
+    port: 31401
+    cipher: auto
+    uuid: 0bebfbc7-0bc1-4121-bec1-3ecf85120ba8
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: kr04.lovemc.xyz
+    network: tcp
+  - &id020
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
+    type: vmess
+    server: 5m4h0k04.mcfront.xyz
+    port: 31601
+    cipher: auto
+    uuid: 0bebfbc7-0bc1-4121-bec1-3ecf85120ba8
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: hk04.lovemc.xyz
+    network: tcp
+  - &id021
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: speed.76898102.xyz
+    port: 443
+    cipher: aes-128-gcm
+    uuid: dddd0b29-1576-4003-9990-d7cea34264db
+    alterId: 0
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /gachcraft
+      path: /835757
       headers:
-        host: dl.kgvn.garenanow.com
-  - &id029
-    name: 🇦🇲_AM_亚美尼亚->🇳🇱_NL_荷兰
+        host: dedi2.1808.cf
+  - &id022
+    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
     type: vmess
-    server: aduibdfg.114514782.xyz
-    port: 2052
+    server: 3d1c4a04.mcfront.xyz
+    port: 31701
     cipher: auto
-    uuid: e412e583-ce9b-3cf5-8812-32b9fa47562b
+    uuid: 0bebfbc7-0bc1-4121-bec1-3ecf85120ba8
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /flkfhzz
-      headers:
-        host: aduibdfg.114514782.xyz
-  - &id030
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_2
+    servername: ca04.lovemc.xyz
+    network: tcp
+  - &id023
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
     type: trojan
     server: AZHJ.xifasd.top
     port: 20769
@@ -392,31 +292,7 @@ proxies:
     sni: ssl.ssl12.xyz
     skip-cert-verify: true
     network: tcp
-  - &id031
-    name: 🇸🇬_SG_新加坡_3
-    type: ss
-    server: 13.215.46.225
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id032
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_4
-    type: trojan
-    server: AZHJ.xifasd.top
-    port: 20804
-    udp: true
-    password: 78af6d6d-6de7-3a1f-a969-c39077fb47bf
-    sni: ssl.ssl12.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id033
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_3
-    type: ss
-    server: 14.29.124.168
-    port: 24002
-    password: QazEdcTgb159@$*
-    cipher: aes-128-cfb
-  - &id034
+  - &id024
     name: 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
     type: vmess
     server: turkey.abraak.site
@@ -427,31 +303,103 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id035
-    name: 🇺🇸_US_美国->🇳🇿_NZ_新西兰
+  - &id025
+    name: 🇰🇿_KZ_哈萨克斯坦
     type: vmess
-    server: 104.16.53.217
-    port: 2052
+    server: p1.09vpn.com
+    port: 80
     cipher: auto
-    uuid: c36d4223-1804-494a-a453-d4f77f10c830
+    uuid: 833c989e-f113-4287-9148-f5595854f3e3
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /public
+      path: /vmess/
       headers:
-        host: detacenter.01.biqibao.site
-  - &id036
-    name: 🇨🇳_CN_中国
+        host: p1.09vpn.com
+  - &id026
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
+    type: vmess
+    server: 104.17.28.197
+    port: 80
+    cipher: auto
+    uuid: 1a6e91f6-4aec-4fba-d652-f65e9dfa4a63
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ylks
+      headers:
+        host: x1.ylks01.eu.org
+  - &id027
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 104.18.83.10
+    port: 443
+    cipher: auto
+    uuid: dddd0b29-1576-4003-9990-d7cea34264db
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /835757
+      headers:
+        host: dedi2.1808.cf
+  - &id028
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 104.17.53.191
+    port: 443
+    cipher: auto
+    uuid: dddd0b29-1576-4003-9990-d7cea34264db
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /835757
+      headers:
+        host: dedi2.1808.cf
+  - &id029
+    name: 🇹🇼_TW_台湾_1
+    type: trojan
+    server: kaizen-tw-4.mielink-dns2.com
+    port: 443
+    udp: true
+    password: 0d4926a0-9881-3609-b6ee-4716da84e59emielink
+    sni: paydiu.com
+    skip-cert-verify: true
+    network: tcp
+  - &id030
+    name: 🇹🇼_TW_台湾_2
+    type: trojan
+    server: ip1158944211.mobgslb.tbcache.com
+    port: 443
+    udp: true
+    password: 1381fa76-e460-3a03-a01b-b9ad00e01415
+    sni: ip1158944211.mobgslb.tbcache.com
+    skip-cert-verify: true
+    network: tcp
+  - &id031
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
     type: trojan
     server: AZHJ.xifasd.top
-    port: 20714
+    port: 20715
     udp: true
     password: 78af6d6d-6de7-3a1f-a969-c39077fb47bf
     sni: ssl.ssl12.xyz
     skip-cert-verify: true
     network: tcp
+  - &id032
+    name: 🇱🇻_LV_拉脱维亚
+    type: ss
+    server: 185.135.86.173
+    port: 9001
+    password: UkXRsXvR6buDMG2Y
+    cipher: aes-256-cfb
 proxy-groups:
   - name: PROXY
     type: select
@@ -510,10 +458,6 @@ proxy-groups:
       - *id030
       - *id031
       - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -551,10 +495,6 @@ proxy-groups:
       - *id030
       - *id031
       - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -590,10 +530,6 @@ proxy-groups:
       - *id030
       - *id031
       - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
